cluster/overlays/zahariev.com/georgi/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: georgi
  namespace: georgi
spec:
  rules:
  - host: georgi.zahariev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: georgi
            port:
              number: 8080
  tls:
  - hosts:
    - georgi.zahariev.com
    secretName: georgi-tls
